// Code generated with goa v3.5.2, DO NOT EDIT.
//
// InjectiveAccountsRPC protocol buffer definition
//
// Command:
// $ goa gen github.com/InjectiveLabs/injective-indexer/api/design -o ../

syntax = "proto3";

package injective_accounts_rpc;

option go_package = "/injective_accounts_rpcpb";

// InjectiveAccountsRPC defines API of Exchange Accounts provider.
service InjectiveAccountsRPC {
	// Provide the account's portfolio value in USD.
	rpc Portfolio (PortfolioRequest) returns (PortfolioResponse);
	// List order states by order hashes
	rpc OrderStates (OrderStatesRequest) returns (OrderStatesResponse);
	// List all subaccounts IDs of an account address
	rpc SubaccountsList (SubaccountsListRequest) returns (SubaccountsListResponse);
	// List subaccount balances for the provided denoms.
	rpc SubaccountBalancesList (SubaccountBalancesListRequest) returns (SubaccountBalancesListResponse);
	// Gets a balance for specific coin denom
	rpc SubaccountBalanceEndpoint (SubaccountBalanceEndpointRequest) returns (SubaccountBalanceEndpointResponse);
	// StreamSubaccountBalance streams new balance changes for a specified
// subaccount and denoms. If no denoms are provided, all denom changes are
// streamed.
	rpc StreamSubaccountBalance (StreamSubaccountBalanceRequest) returns (stream StreamSubaccountBalanceResponse);
	// Get subaccount's deposits and withdrawals history
	rpc SubaccountHistory (SubaccountHistoryRequest) returns (SubaccountHistoryResponse);
	// Get subaccount's orders summary
	rpc SubaccountOrderSummary (SubaccountOrderSummaryRequest) returns (SubaccountOrderSummaryResponse);
	// Provide historical trading rewards
	rpc Rewards (RewardsRequest) returns (RewardsResponse);
}

message PortfolioRequest {
	// Account address
	string account_address = 1;
}

message PortfolioResponse {
	// The portfolio of this account
	AccountPortfolio portfolio = 1;
}

message AccountPortfolio {
	// The account's portfolio value in USD.
	string portfolio_value = 1;
	// The account's available balance value in USD.
	string available_balance = 2;
	// The account's locked balance value in USD.
	string locked_balance = 3;
	// The account's total unrealized PnL value in USD.
	string unrealized_pnl = 4;
	// List of all subaccounts' portfolio
	repeated SubaccountPortfolio subaccounts = 5;
}

message SubaccountPortfolio {
	// The ID of this subaccount
	string subaccount_id = 1;
	// The subaccount's available balance value in USD.
	string available_balance = 2;
	// The subaccount's locked balance value in USD.
	string locked_balance = 3;
	// The subaccount's total unrealized PnL value in USD.
	string unrealized_pnl = 4;
}

message OrderStatesRequest {
	repeated string spot_order_hashes = 1;
	repeated string derivative_order_hashes = 2;
}

message OrderStatesResponse {
	// List of the spot order state records
	repeated OrderStateRecord spot_order_states = 1;
	// List of the derivative order state records
	repeated OrderStateRecord derivative_order_states = 2;
}

message OrderStateRecord {
	// Hash of the order
	string order_hash = 1;
	// The subaccountId that this order belongs to
	string subaccount_id = 2;
	// The Market ID of the order
	string market_id = 3;
	// The type of the order
	string order_type = 4;
	// The side of the order
	string order_side = 5;
	// The state (status) of the order
	string state = 6;
	// The filled quantity of the order
	string quantity_filled = 7;
	// The filled quantity of the order
	string quantity_remaining = 8;
	// Order committed timestamp in UNIX millis.
	sint64 created_at = 9;
	// Order updated timestamp in UNIX millis.
	sint64 updated_at = 10;
}

message SubaccountsListRequest {
	// Account address, the subaccounts owner
	string account_address = 1;
}

message SubaccountsListResponse {
	repeated string subaccounts = 1;
}

message SubaccountBalancesListRequest {
	// SubaccountId of the trader we want to get the trades from
	string subaccount_id = 1;
	// Filter balances by denoms. If not set, the balances of all the denoms for
// the subaccount are provided.
	repeated string denoms = 2;
}

message SubaccountBalancesListResponse {
	// List of subaccount balances
	repeated SubaccountBalance balances = 1;
}

message SubaccountBalance {
	// Related subaccount ID
	string subaccount_id = 1;
	// Account address, owner of this subaccount
	string account_address = 2;
	// Coin denom on the chain.
	string denom = 3;
	SubaccountDeposit deposit = 4;
}

message SubaccountDeposit {
	string total_balance = 1;
	string available_balance = 2;
}

message SubaccountBalanceEndpointRequest {
	// SubaccountId of the trader we want to get the trades from
	string subaccount_id = 1;
	// Specify denom to get balance
	string denom = 2;
}

message SubaccountBalanceEndpointResponse {
	// Subaccount balance
	SubaccountBalance balance = 1;
}

message StreamSubaccountBalanceRequest {
	// SubaccountId of the trader we want to get the trades from
	string subaccount_id = 1;
	// Filter balances by denoms. If not set, the balances of all the denoms for
// the subaccount are provided.
	repeated string denoms = 2;
}

message StreamSubaccountBalanceResponse {
	// Subaccount balance
	SubaccountBalance balance = 1;
	// Operation timestamp in UNIX millis.
	sint64 timestamp = 2;
}

message SubaccountHistoryRequest {
	// SubaccountId of the trader we want to get the history from
	string subaccount_id = 1;
	// Filter history by denom
	string denom = 2;
	// Filter history by transfer type
	repeated string transfer_types = 3;
	// Skip will skip the first n item from the result
	uint64 skip = 4;
	// Limit is used to specify the maximum number of items to be returned
	sint32 limit = 5;
	// Upper bound of account transfer history's executedAt
	sint64 end_time = 6;
}

message SubaccountHistoryResponse {
	// List of subaccount transfers
	repeated SubaccountBalanceTransfer transfers = 1;
	Paging paging = 2;
}

message SubaccountBalanceTransfer {
	// Type of the subaccount balance transfer
	string transfer_type = 1;
	// Subaccount ID of the sending side
	string src_subaccount_id = 2;
	// Account address of the sending side
	string src_account_address = 3;
	// Subaccount ID of the receiving side
	string dst_subaccount_id = 4;
	// Account address of the receiving side
	string dst_account_address = 5;
	// Coin amount of the transfer
	CosmosCoin amount = 6;
	// Timestamp of the transfer in UNIX millis
	sint64 executed_at = 7;
}

message CosmosCoin {
	// Coin denominator
	string denom = 1;
	// Coin amount (big int)
	string amount = 2;
}
// Paging defines the structure for required params for handling pagination
message Paging {
	// total number of txs saved in database
	sint64 total = 1;
	// can be either block height or index num
	sint32 from = 2;
	// can be either block height or index num
	sint32 to = 3;
	// count entries by subaccount, serving some places on helix
	sint64 count_by_subaccount = 4;
}

message SubaccountOrderSummaryRequest {
	// SubaccountId of the trader we want to get the summary from
	string subaccount_id = 1;
	// MarketId is limiting order summary to specific market only
	string market_id = 2;
	// Filter by direction of the orders
	string order_direction = 3;
}

message SubaccountOrderSummaryResponse {
	// Total count of subaccount's spot orders in given market and direction
	sint64 spot_orders_total = 1;
	// Total count of subaccount's derivative orders in given market and direction
	sint64 derivative_orders_total = 2;
}

message RewardsRequest {
	// The distribution epoch sequence number. -1 for latest.
	sint64 epoch = 1;
	// Account address for the rewards distribution
	string account_address = 2;
}

message RewardsResponse {
	// The trading rewards distributed
	repeated Reward rewards = 1;
}

message Reward {
	// Account address
	string account_address = 1;
	// Reward coins distributed
	repeated Coin rewards = 2;
	// Rewards distribution timestamp in UNIX millis.
	sint64 distributed_at = 3;
}

message Coin {
	// Denom of the coin
	string denom = 1;
	string amount = 2;
}
